parslers-benchmark/src/tests/invalid/semanticErr/while/truErr.wacc
# true typo

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  while tru do
    skip
  done
end
